--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-Squid:
-  image: sameersbn/squid:3.3.8-15
+squid:
+  build: .
   ports:
     - "3128:3128"
   volumes:
-    - /srv/docker/squid/cache:/var/spool/squid3
+    - /var/spool/squid3
   restart: always
