Changed the config to have a larger cache, and use ipv4 first

--- a/squid.conf
+++ b/squid.conf
@@ -3407,7 +3407,7 @@ http_port 3128
 #
 
 # Uncomment and adjust the following to add a disk cache directory.
-cache_dir ufs /var/spool/squid 100 16 256
+cache_dir ufs /var/spool/squid 5000 16 256
 
 #  TAG: store_dir_select_algorithm
 #	How Squid selects which cache_dir to use when the response
@@ -7533,7 +7533,7 @@ refresh_pattern .		0	20%	4320
 #	  connectivity is used (and tested), potentially hiding network
 #	  problems which would otherwise be detected and warned about.
 #Default:
-# dns_v4_first off
+dns_v4_first on
 
 #  TAG: ipcache_size	(number of entries)
 #	Maximum number of DNS IP cache entries.
